--- a/chatroomservice/pom.xml
+++ b/chatroomservice/pom.xml
@@ -4,9 +4,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.github.witalijbukatkin.chatroom</groupId>
-	<artifactId>messageservice</artifactId>
+	<artifactId>chatroomservice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>messageservice</name>
+	<name>chatroomservice</name>
 
 	<parent>
 		<groupId>com.github.witalijbukatkin</groupId>
@@ -17,14 +17,18 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.2.10</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
 </project>
