--- a/chatroomservice/src/main/resources/application.yml
+++ b/chatroomservice/src/main/resources/application.yml
@@ -7,3 +7,8 @@ spring:
   mvc.view:
     prefix: /WEB-INF/jsp/
     suffix: .jsp
+
+#security:
+#  oauth2:
+#    resource:
+#      userInfoUri: 192.168.1.70:5000/oauth/current
