--- a/chatroomservice/src/main/resources/application.yml
+++ b/chatroomservice/src/main/resources/application.yml
@@ -4,11 +4,8 @@ server:
 spring:
   application:
     name: chatroomservice
-  mvc.view:
-    prefix: /WEB-INF/jsp/
-    suffix: .jsp
 
-#security:
-#  oauth2:
-#    resource:
-#      userInfoUri: 192.168.1.70:5000/oauth/current
+security:
+  oauth2:
+    resource:
+      userInfoUri: 192.168.1.70:5000/oauth/current
