--- a/authservice/src/main/resources/application.yml
+++ b/authservice/src/main/resources/application.yml
@@ -7,12 +7,13 @@ spring:
     jpa:
         properties:
             hibernate.format_sql: true
+            hibernate.hbm2ddl.auto: update
         show-sql: true
     datasource:
         platform: postgres
         driver-class-name: org.postgresql.Driver
-        url: jdbc:postgresql://192.168.1.70/authservice
+        url: jdbc:${POSTGRES_URL}/authservice
         username: postgres
-        password: ChatRoom_PASSWORD
+        password: ${POSTGRES_PASSWORD}
         initialization-mode: always
         continue-on-error: true
