--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - 15672:15672
       - 61613:61613
     environment:
-      RABBITMQ_DEFAULT_USER: chatroom
-      RABBITMQ_DEFAULT_PASS: chatroompassword
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASS}
 
   db:
     build: postgres
@@ -16,7 +16,7 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_PASSWORD: ChatRoom_PASSWORD
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
 
   adminer:
     image: adminer
@@ -31,7 +31,7 @@ services:
       - 5000:5000
     environment:
       POSTGRES_URL: postgresql://db
-      POSTGRES_PASSWORD: ChatRoom_PASSWORD
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     logging:
       options:
         max-size: "10m"
@@ -44,7 +44,7 @@ services:
       - 8081:8081
     environment:
       POSTGRES_URL: postgresql://db
-      POSTGRES_PASSWORD: ChatRoom_PASSWORD
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       AUTHSERVICE_URL: http://authservice:5000
     logging:
       options:
@@ -59,8 +59,8 @@ services:
     environment:
       AUTHSERVICE_URL: authservice:5000
       MESSAGESERVICE_URL: messageservice:8081
-      RABBITMQ_USER: chatroom
-      RABBITMQ_PASSWORD: chatroompassword
+      RABBITMQ_USER: ${RABBITMQ_USER}
+      RABBITMQ_PASSWORD: ${RABBITMQ_PASS}
       RABBITMQ_URL: rabbitmq
     logging:
       options:
