--- a/chatroomservice/src/main/resources/application.yml
+++ b/chatroomservice/src/main/resources/application.yml
@@ -8,4 +8,4 @@ spring:
 security:
   oauth2:
     resource:
-      userInfoUri: http://192.168.1.70:5000/oauth/current
+      userInfoUri: ${AUTHSERVICE_URL}/oauth/current
