Add delay in docker containers

--- a/authservice/Dockerfile
+++ b/authservice/Dockerfile
@@ -3,4 +3,4 @@ EXPOSE 5000
 
 ADD /target/authservice*.jar authservice.jar
 
-ENTRYPOINT ["java", "-jar", "authservice.jar"]
+ENTRYPOINT sleep 20 && java -jar authservice.jar
